--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -42,3 +42,7 @@ th,td{
   border-right:1px solid #e0e0e0 ;
   border-bottom:1px solid #e0e0e0 ;
 }
+
+.active{
+  background-color: greenyellow;
+}
